removed unused imports and fix a lot of other warnings, update api version to 1.21, bumped plugin version